--- a/packages/shared/.env.example
+++ b/packages/shared/.env.example
@@ -10,4 +10,5 @@ TESTPIG_RABBITMQ_MAX_LENGTH='10000'
 TESTPIG_API_KEY=
 
 ## DEV ENV
-#TESTPIG_RABBITMQ_URL= 'amqp://pig_admin:T3$tp!gR@bb!tMQ@165.22.176.122'
+#TESTPIG_RABBITMQ_URL= 'get-this-value-from-kerry'
+#TESTPIG_API_KEY= 'create-new-value-in-dev-env'
