--- a/packages/jest-reporter/package.json
+++ b/packages/jest-reporter/package.json
@@ -14,6 +14,7 @@
     "uuid": "^9.0.1"
   },
   "devDependencies": {
+    "@babel/parser": "7.26.5",
     "@jest/reporters": "^29.7.0",
     "@jest/test-result": "^29.7.0",
     "@jest/types": "^29.6.3",
