--- a/package.json
+++ b/package.json
@@ -8,12 +8,13 @@
     "build": "npm run build:shared && npm run build:core && npm run build:reporters",
     "build:shared": "cd packages/shared && npm run build",
     "build:core": "cd packages/core && npm run build",
-    "build:reporters": "cd packages/cypress-reporter && npm run build && cd ../mocha-reporter && npm run build && cd ../jest-reporter && npm run build && cd ../playwright-reporter && npm run build",
+    "build:reporters": "cd packages/cypress-reporter && npm run build && cd ../mocha-reporter && npm run build && cd ../jest-reporter && npm run build && cd ../playwright-reporter && npm run build && cd ../webdriverio-reporter && npm run build",
     "test": "lerna run test",
     "test:cypress": "cd packages/cypress-tests && npx cypress run",
     "test:mocha": "cd packages/mocha-tests && npm test",
     "test:jest": "cd packages/jest-tests && npm test",
     "test:playwright": "cd packages/playwright-tests && npm test",
+    "test:webdriverio": "cd packages/webdriverio-tests && npm test",
     "lint": "lerna run lint",
     "clean": "lerna clean"
   },
