--- a/lerna.json
+++ b/lerna.json
@@ -4,7 +4,12 @@
   "command": {
     "publish": {
       "conventionalCommits": true,
-      "yes": true
+      "yes": true,
+      "message": "chore(release): publish"
+    },
+    "version": {
+      "conventionalCommits": true,
+      "message": "chore(release): version packages"
     }
   },
   "packages": [
