--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "build:shared": "cd packages/shared && npm run build",
     "build:core": "cd packages/core && npm run build",
     "build:reporters": "cd packages/cypress-reporter && npm run build && cd ../mocha-reporter && npm run build && cd ../jest-reporter && npm run build && cd ../playwright-reporter && npm run build && cd ../webdriverio-reporter && npm run build",
-    "test": "lerna run test",
+    "publish": "npx lerna publish --no-private",
+    "test": "npx lerna run test",
     "test:cypress": "cd packages/cypress-tests && npx cypress run",
     "test:mocha": "cd packages/mocha-tests && npm test",
     "test:jest": "cd packages/jest-tests && npm test",
