--- a/packages/cypress-reporter/package.json
+++ b/packages/cypress-reporter/package.json
@@ -22,5 +22,13 @@
   },
   "peerDependencies": {
     "cypress": ">=10.0.0"
+  },
+  "publishConfig": {
+    "access": "public"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/testpig-io/node-reporters.git",
+    "directory": "packages/cypress-reporter"
   }
 }
