--- a/packages/jest-reporter/package.json
+++ b/packages/jest-reporter/package.json
@@ -26,5 +26,13 @@
   },
   "peerDependencies": {
     "jest": ">=29.0.0"
+  },
+  "publishConfig": {
+    "access": "public"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/testpig-io/node-reporters.git",
+    "directory": "packages/jest-reporter"
   }
 }
