--- a/packages/playwright-reporter/package.json
+++ b/packages/playwright-reporter/package.json
@@ -22,5 +22,13 @@
   },
   "peerDependencies": {
     "@playwright/test": ">=1.38.0"
+  },
+  "publishConfig": {
+    "access": "public"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/testpig-io/node-reporters.git",
+    "directory": "packages/playwright-reporter"
   }
 }
