--- a/packages/webdriverio-reporter/package.json
+++ b/packages/webdriverio-reporter/package.json
@@ -23,5 +23,13 @@
   },
   "peerDependencies": {
     "@wdio/reporter": ">=8.0.0"
+  },
+  "publishConfig": {
+    "access": "public"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/testpig-io/node-reporters.git",
+    "directory": "packages/webdriverio-reporter"
   }
 }
