--- a/lerna.json
+++ b/lerna.json
@@ -5,7 +5,8 @@
     "publish": {
       "conventionalCommits": true,
       "yes": true,
-      "message": "chore(release): publish"
+      "message": "chore(release): publish",
+      "registry": "https://registry.npmjs.org/"
     },
     "version": {
       "conventionalCommits": true,
@@ -14,5 +15,8 @@
   },
   "packages": [
     "packages/*"
+  ],
+  "ignore": [
+    "**/*-test"
   ]
 }
