--- a/packages/webdriverio-reporter/package.json
+++ b/packages/webdriverio-reporter/package.json
@@ -31,5 +31,6 @@
     "type": "git",
     "url": "https://github.com/testpig-io/node-reporters.git",
     "directory": "packages/webdriverio-reporter"
-  }
+  },
+  "gitHead": "bc4d5b9a24b7633acf6c024c6a15cfc01d554b0a"
 }
