clean up unused rabbitmq logic

--- a/packages/shared/.env.example
+++ b/packages/shared/.env.example
@@ -1,14 +1,4 @@
-# LOCAL
-TESTPIG_RABBITMQ_URL='amqp://localhost'
-TESTPIG_RABBITMQ_EXCHANGE='test_events_exchange'
-TESTPIG_RABBITMQ_QUEUE='test_events'
-TESTPIG_RABBITMQ_DLX='test_events_dlx'
-TESTPIG_RABBITMQ_DLX_KEY='dead.letter'
-TESTPIG_RABBITMQ_ROUTING_KEY='test.events.default'
-TESTPIG_RABBITMQ_MSG_TTL='3600000'
-TESTPIG_RABBITMQ_MAX_LENGTH='10000'
-TESTPIG_API_KEY=
-
-## DEV ENV
-#TESTPIG_RABBITMQ_URL= 'get-this-value-from-kerry'
-#TESTPIG_API_KEY= 'create-new-value-in-dev-env'
+TESTPIG_API_KEY=<REQUIRED>
+TESTPIG_API_URL=<DEFAULTS_TO_PROD>
+TESTPIG_RUN_ID=<DEFAULTS_TO_GIT_BRANCH>
+TESTPIG_DEBUG_LOGS=<DEFAULTS_TO_FALSE>
