--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@testpig/core",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "private": false,
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -9,7 +9,7 @@
     "test": "jest"
   },
   "dependencies": {
-    "@testpig/shared": "1.0.0",
+    "@testpig/shared": "^1.0.1",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
