--- a/packages/jest-reporter/package.json
+++ b/packages/jest-reporter/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@testpig/jest-reporter",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "TestPig reporter for Jest",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -9,8 +9,8 @@
     "test": "jest"
   },
   "dependencies": {
-    "@testpig/core": "1.0.0",
-    "@testpig/shared": "1.0.0",
+    "@testpig/core": "^1.0.1",
+    "@testpig/shared": "^1.0.1",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
