--- a/package.json
+++ b/package.json
@@ -23,5 +23,8 @@
   "devDependencies": {
     "@types/node": "^20.8.2",
     "typescript": "^5.2.2"
+  },
+  "dependencies": {
+    "ci-info": "^4.2.0"
   }
 }
