--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -6,7 +6,8 @@
   "types": "dist/index.d.ts",
   "scripts": {
     "build": "tsc",
-    "test": "jest"
+    "test": "jest",
+    "test:watch": "jest --watch"
   },
   "dependencies": {
     "@testpig/shared": "^1.0.2",
@@ -16,6 +17,8 @@
     "@types/jest": "^29.5.5",
     "@types/node": "^20.8.2",
     "@types/uuid": "^9.0.4",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.1.1",
     "typescript": "^5.2.2"
   },
   "publishConfig": {
