--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -25,7 +25,7 @@ jobs:
 
     - name: Install dependencies
       run: |
-        npm ci
+        npm install
         npx lerna bootstrap
 
     - name: Build packages
