--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -25,8 +25,7 @@ jobs:
 
     - name: Install dependencies
       run: |
-        npm install
-        npx lerna bootstrap
+        npm ci
 
     - name: Build packages
       run: npx lerna run build
