--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "devDependencies": {
     "@types/node": "^20.8.2",
+    "lerna": "^8.2.3",
     "typescript": "^5.2.2"
   },
   "dependencies": {
