--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -10,7 +10,7 @@ jobs:
   test:
     env:
       TESTPIG_API_KEY: ${{ secrets.TESTPIG_API_KEY}}
-      TESTPIG_DEBUG_LOGS: true
+      TESTPIG_DEBUG_LOGS: false
       TESTPIG_PROJECT_ID: ee47c
     runs-on: ubuntu-latest
 
@@ -30,6 +30,9 @@ jobs:
     - name: Install dependencies
       run: |
         npm ci
+
+    - name: Install Playwright browsers
+      run: npx playwright install
 
     - name: Build packages
       run: npx lerna run build
