--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -31,6 +31,10 @@ jobs:
       run: |
         npm ci
 
+    - name: Install chromedriver 
+      run: |
+        npx chromedriver install
+
     - name: Install Playwright browsers
       run: |
         npx playwright install-deps 
