--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -31,14 +31,14 @@ jobs:
         run: |
           npm ci
 
-      - name: Setup Chrome
-        uses: browser-actions/setup-chrome@v1
-        with:
-          chrome-version: '131'
+      # - name: Setup Chrome
+      #   uses: browser-actions/setup-chrome@v1
+      #   with:
+      #     chrome-version: '131'
   
-      - uses: nanasess/setup-chromedriver@v2
-        with:
-          chromedriver-version: '131.0.6778.87'
+      # - uses: nanasess/setup-chromedriver@v2
+      #   with:
+      #     chromedriver-version: '131.0.6778.87'
 
       - name: Install Playwright browsers
         run: |
@@ -48,8 +48,8 @@ jobs:
       - name: Build packages
         run: npx lerna run build
 
-      - name: Run tests for webdriverio tests
-        run: npx lerna run test --scope=@testpig/webdriverio-tests
+      # - name: Run tests for webdriverio tests
+      #   run: npx lerna run test --scope=@testpig/webdriverio-tests
 
       - name: Run tests for core package
         run: |
