--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -57,25 +57,25 @@ jobs:
 
       - name: Run tests for core package
         run: |
-          npx lerna run test --scope=@testpig/core 2>&1 | sed 's/\x1b\[[0-9;]*m//g' > test-results/test-core.log
+          npx lerna run test --scope=@testpig/core --verbose 2>&1 | sed 's/\x1b\[[0-9;]*m//g' > test-results/test-core.log || true
 
       - name: Run tests for shared package
-        run: npx lerna run test --scope=@testpig/shared 2>&1 | sed 's/\x1b\[[0-9;]*m//g' > test-results/test-shared.log
+        run: npx lerna run test --scope=@testpig/shared --verbose 2>&1 | sed 's/\x1b\[[0-9;]*m//g' > test-results/test-shared.log || true
 
       - name: Run tests for cypress tests
-        run: npx lerna run test --scope=@testpig/cypress-tests 2>&1 | sed 's/\x1b\[[0-9;]*m//g' > test-results/test-cypress.log
+        run: npx lerna run test --scope=@testpig/cypress-tests --verbose 2>&1 | sed 's/\x1b\[[0-9;]*m//g' > test-results/test-cypress.log || true
 
       - name: Run tests for jest tests
-        run: npx lerna run test --scope=@testpig/jest-tests 2>&1 | sed 's/\x1b\[[0-9;]*m//g' > test-results/test-jest.log
+        run: npx lerna run test --scope=@testpig/jest-tests --verbose 2>&1 | sed 's/\x1b\[[0-9;]*m//g' > test-results/test-jest.log || true
 
       - name: Run tests for mocha tests
-        run: npx lerna run test --scope=@testpig/mocha-tests 2>&1 | sed 's/\x1b\[[0-9;]*m//g' > test-results/test-mocha.log
+        run: npx lerna run test --scope=@testpig/mocha-tests --verbose 2>&1 | sed 's/\x1b\[[0-9;]*m//g' > test-results/test-mocha.log || true
 
       - name: Run tests for playwright tests
-        run: npx lerna run test --scope=@testpig/playwright-tests 2>&1 | sed 's/\x1b\[[0-9;]*m//g' > test-results/test-playwright.log
+        run: npx lerna run test --scope=@testpig/playwright-tests --verbose 2>&1 | sed 's/\x1b\[[0-9;]*m//g' > test-results/test-playwright.log || true
 
       - name: Run tests for vitest tests
-        run: npx lerna run test --scope=@testpig/vitest-tests 2>&1 | sed 's/\x1b\[[0-9;]*m//g' > test-results/test-vitest.log
+        run: npx lerna run test --scope=@testpig/vitest-tests --verbose 2>&1 | sed 's/\x1b\[[0-9;]*m//g' > test-results/test-vitest.log || true
 
       - name: Upload test results
         uses: actions/upload-artifact@v4
