--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -14,6 +14,7 @@
     "amqplib": "^0.10.3",
     "dotenv": "^16.4.7",
     "formdata-node": "^6.0.3",
+    "formdata-polyfill": "^4.0.10",
     "undici": "^7.15.0",
     "uuid": "^9.0.1"
   },
