--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -4,6 +4,12 @@
   "private": false,
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
+  "bin": {
+    "testpig-git-env": "./dist/bin/git-env.js"
+  },
+  "files": [
+    "dist/"
+  ],
   "scripts": {
     "build": "tsc",
     "test": "jest",
