--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -259,3 +259,93 @@ jobs:
           fi
           
           echo "✅ All JSON fields validated successfully"
+
+  # Jenkins simulation job to test Jenkins provider detection without requiring actual Jenkins
+  test-jenkins-simulation:
+    runs-on: ubuntu-latest
+    
+    steps:
+      - uses: actions/checkout@v4
+      
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20'
+          cache: "npm"
+      
+      - name: Install dependencies
+        run: npm ci
+      
+      - name: Build shared package
+        run: npx lerna run build --scope=@testpig/shared
+      
+      - name: Test Jenkins Provider Simulation
+        env:
+          # Simulate Jenkins environment variables
+          JENKINS_URL: "https://jenkins.example.com"
+          BUILD_NUMBER: "123"
+          BUILD_ID: "123"
+          JOB_NAME: "testpig-node-reporters/main"
+          BRANCH_NAME: "main"
+          GIT_COMMIT: "abc123def456"
+          GIT_BRANCH: "origin/main"
+          GIT_AUTHOR_NAME: "Test User"
+          GIT_AUTHOR_EMAIL: "test@example.com"
+          GIT_COMMITTER_NAME: "Test User"
+          GIT_COMMITTER_EMAIL: "test@example.com"
+          GIT_URL: "https://github.com/testpig-io/node-reporters.git"
+        run: |
+          echo "=== Testing Jenkins Provider Simulation ==="
+          echo "Simulating Jenkins environment variables:"
+          echo "JENKINS_URL=$JENKINS_URL"
+          echo "BUILD_NUMBER=$BUILD_NUMBER"
+          echo "BUILD_ID=$BUILD_ID"
+          echo "JOB_NAME=$JOB_NAME"
+          echo "BRANCH_NAME=$BRANCH_NAME"
+          echo "GIT_COMMIT=$GIT_COMMIT"
+          echo "GIT_BRANCH=$GIT_BRANCH"
+          echo "GIT_AUTHOR_NAME=$GIT_AUTHOR_NAME"
+          echo "GIT_AUTHOR_EMAIL=$GIT_AUTHOR_EMAIL"
+          echo ""
+          
+          # Clear GitHub Actions variables to avoid conflicts
+          unset GITHUB_ACTIONS GITHUB_RUN_ID GITHUB_WORKFLOW
+          
+          json_output=$(node packages/shared/dist/bin/git-env.js --verbose --json)
+          echo "CLI Output:"
+          echo "$json_output"
+          
+          provider=$(echo "$json_output" | jq -r '.provider')
+          echo ""
+          echo "=== Validating Jenkins Provider Detection ==="
+          echo "Expected provider: jenkins"
+          echo "Detected provider: $provider"
+          
+          if [[ "$provider" == "jenkins" ]]; then
+            echo "✅ Jenkins provider detected correctly in simulation"
+          else
+            echo "❌ Expected jenkins, got $provider"
+            exit 1
+          fi
+          
+          # Test author detection
+          author_name=$(echo "$json_output" | jq -r '.author')
+          author_email=$(echo "$json_output" | jq -r '.email')
+          echo ""
+          echo "=== Validating Jenkins Author Detection ==="
+          echo "Expected author: $GIT_AUTHOR_NAME"
+          echo "Detected author: $author_name"
+          echo "Expected email: $GIT_AUTHOR_EMAIL"
+          echo "Detected email: $author_email"
+          
+          if [[ "$author_name" == "$GIT_AUTHOR_NAME" ]] || [[ "$author_name" != "unknown" ]]; then
+            echo "✅ Jenkins author detection working"
+          else
+            echo "⚠️  Jenkins author detection may need improvement"
+          fi
+          
+          if [[ "$author_email" == "$GIT_AUTHOR_EMAIL" ]] || [[ "$author_email" != "unknown" ]]; then
+            echo "✅ Jenkins email detection working"
+          else
+            echo "⚠️  Jenkins email detection may need improvement"
+          fi
